src/objects/Objective_Summary_Comment__c.object
<CustomObject>
    <description>Provides storage for the Objective comments recorded in summary reports.</description>
    <fields>
        <fullName>Action_Plan_Objective__c</fullName>
        <description>The objective that this is a comment for.</description>
        <label>Action Plan Objective</label>
        <referenceTo>Action_Plan_Objective__c</referenceTo>
        <relationshipLabel>Objective Summary Comments</relationshipLabel>
        <relationshipName>Objective_Summary_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Action_Summary__c</fullName>
        <description>The Action Summary Report for this comment and hence the time range for this comment</description>
        <label>Action Summary</label>
        <referenceTo>Action_Summary__c</referenceTo>
        <relationshipLabel>Objective Summary Comments</relationshipLabel>
        <relationshipName>Objective_Summary_Comments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Met_Objective_Count__c</fullName>
        <description>Number of times the objective was met during the period of the summary.</description>
        <label>Met Objective Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Met_Count__c</fullName>
        <description>Number if times the objective was tried but not met during the summary period..</description>
        <label>Not Met Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occurrences__c</fullName>
        <description>The number of times the behavior was observed during the Summary period</description>
        <label>Occurrences</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_Met__c</fullName>
        <formula>if( Trials_Count__c &gt; 0, 100 * Met_Objective_Count__c  /    Trials_Count__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Met</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>No changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify methodology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continue informally</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trials_Count__c</fullName>
        <formula>Met_Objective_Count__c +  Not_Met_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trials Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Objective Summary Comment</label>
    <nameField>
        <label>Objective_Summary_Comment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objective Summary Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>